[gd_scene load_steps=5 format=3 uid="uid://dvby1shhe3wy"]

[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_f8uk8"]
[ext_resource type="Texture2D" uid="uid://bejawygqxxe2i" path="res://resources/graphics/enemies/scout.png" id="1_ggrwr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eisvn"]
radius = 46.0109

[sub_resource type="CircleShape2D" id="CircleShape2D_iglty"]
radius = 675.581

[node name="Scout" type="CharacterBody2D" groups=["Scout"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_f8uk8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
shape = SubResource("CircleShape2D_eisvn")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(46, 29)
rotation = 1.5708
texture = ExtResource("1_ggrwr")
metadata/_edit_lock_ = true

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
visible = false
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_iglty")

[node name="LaserSpawnPosition" type="Node2D" parent="."]
position = Vector2(-9, 0)

[node name="Left" type="Marker2D" parent="LaserSpawnPosition"]
position = Vector2(123, -31)

[node name="Right" type="Marker2D" parent="LaserSpawnPosition"]
position = Vector2(129, 22)

[node name="LaserCooldown" type="Timer" parent="."]

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="LaserCooldown" to="." method="_on_laser_cooldown_timeout"]
